# libzakutils

./: .gitignore  Makefile.am  autogen.sh  configure.ac  libzakutils.pc.in  meson.build
debian/: changelog  control  copyright  gbp.conf  libzakutils-dev.install  libzakutils.install  rules
debian/patches/: 0001-aclocal-wheezy.patch  0002-glib-old-version.patch  0003-glib-old-version-in-pkgconfig.patch  series
src/: Makefile.am  datetime.c  datetime.h  generic.c  generic.h  libzakutils.h  meson.build
tests/: Makefile.am  format_money.c  gdatetime_from_string.c  meson.build
