format_money_exe = executable('format_money', 'format_money.c',
                              include_directories: inc,
                              dependencies: [glib_dep, gobject_dep, gio_dep],
                              link_with: libzakutils)

gdatetime_from_string_exe = executable('gdatetime_from_string', 'gdatetime_from_string.c',
                              include_directories: inc,
                              dependencies: [glib_dep, gobject_dep, gio_dep],
                              link_with: libzakutils)
